--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mariadb://localhost/db_springboot?zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+# JPA / HIBERNATE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+# Activate/Deactivate sql logs
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# Autogenerate de DB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=debug
